Etape 10 utilisation EL (Expression Langage)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
 <body>
 	<form action="bonjour" method="post">
 		<input type="text" name="nom">
+		<input type="text" name="prenom">
 		<input type="submit">
 	</form>
 </body>
